--- a/index.html
+++ b/index.html
@@ -11,97 +11,99 @@
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <img class="header-logo" src="images/logo.svg" alt="logo">
-    <h1 class="header-head h1">A history of everything you copy</h1>
-    <p class="header-para p">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-    <div class="header-btns btns">
-      <a href="#" class="header-btn-ios ios">Download for iOS</a>
-      <a href="#" class="header-btn-mac mac">Download for Mac</a>
-    </div>
-  </header>
-  <section class="section-one section">
-    <p class="one-h2 h2">Keep track of your snippets</p>
-    <p class="one-p p">Clipboard instantly stores item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apos will help you organize everything.</p>
-  </section>
-  <section class="section-two section">
-    <div class="two-left">
-      <img src="images/image-computer.png" alt="image-computer" class="two-img">
-    </div>
-    <div class="two-right">
-      <div class="two-right-div rightA">
-        <p class="two-h4 h4">Quick Search</p>
-        <p class="two-p p">Easily search your snippets by content, category, web address, application, and more.</p>
+  <main class="cont-main">
+    <header class="header">
+      <img class="header-logo" src="images/logo.svg" alt="logo">
+      <h1 class="header-head h1">A history of everything you copy</h1>
+      <p class="header-para p">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
+      <div class="header-btns btns">
+        <a href="#" class="header-btn-ios ios">Download for iOS</a>
+        <a href="#" class="header-btn-mac mac">Download for Mac</a>
       </div>
-      <div class="two-right-div rightB">
-        <p class="two-h4 h4">iCloud Sync</p>
-        <p class="two-p p"> Instantly saves and syncs snippets across all your devices.</p>
+    </header>
+    <section class="section-one section">
+      <p class="one-h2 h2">Keep track of your snippets</p>
+      <p class="one-p p">Clipboard instantly stores item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apos will help you organize everything.</p>
+    </section>
+    <section class="section-two section">
+      <div class="two-left">
+        <img src="images/image-computer.png" alt="image-computer" class="two-img">
       </div>
-      <div class="two-right-div rightC">
-        <p class="two-h4 h4">Complete History</p>
-        <p class="two-p p">Retrieve any snippets from the first moment you started using the app.</p>
+      <div class="two-right">
+        <div class="two-right-div rightA">
+          <p class="two-h4 h4">Quick Search</p>
+          <p class="two-p">Easily search your snippets by content, category, web address, application, and more.</p>
+        </div>
+        <div class="two-right-div rightB">
+          <p class="two-h4 h4">iCloud Sync</p>
+          <p class="two-p"> Instantly saves and syncs snippets across all your devices.</p>
+        </div>
+        <div class="two-right-div rightC">
+          <p class="two-h4 h4">Complete History</p>
+          <p class="two-p">Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
       </div>
-    </div>
-  </section>
-  <section class="section-three section">
-    <p class="three-h2 h2">Acess Clipboard Abywhere</p>
-    <p class="three-p p">Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
-  </section>
-  <section class="section-four section">
-    <img src="images/image-devices.png" alt="image-devices" class="four-img">
-  </section>
-  <section class="section-five section">
-    <p class="five-h2 h2">Supercharge your workflow</p2>
-    <p class="five-p p">We've got the tools to boost your productivity.</p>
-  </section>
-  <section class="section-six section">
-    <div class="six six-A">
-      <img src="images/icon-blacklist.svg" alt="icon-blacklist" class="A-img">
-      <p class="h4-A h4">Create blacklists</p>
-      <p class="p-A p">Ensure sensitive inforation never makes its way to your clipboard by excluding certain sources.</p>
-    </div>
-    <div class="six six-B">
-      <img src="images/icon-text.svg" alt="icon-text" class="B-img">
-      <p class="h4-B h4">Plain text snippets</p>
-      <p class="p-B p">Remove unwanted formatting from copied text for a consistent look.</p>
-    </div>
-    <div class="six six-C">
-      <img src="images/icon-preview.svg" alt="icon-preview" class="A-img">
-      <p class="h4-C h4">Sneak preview</p>
-      <p class="p-C p">Quick preview of all snippets on your Clipboard for easy access.</p>
-    </div> 
-  </section>
-  <section class="section-seven section">
-    <img src="images/logo-google.png" alt="logo-google" class="seven-img">
-    <img src="images/logo-ibm.png" alt="logo-ibm" class="seven-img">
-    <img src="images/logo-microsoft.png" alt="logo-microsoft" class="seven-img">
-    <img src="images/logo-hp.png" alt="logo-hp" class="seven-img">
-    <img src="images/logo-vector-graphics.png" alt="logo-vector-graphics" class="seven-img">
-  </section>
-  <section class="section-eight section">
-    <p class="eight-h2 h2">Clipboard for iOS and Mac OS</p>
-    <p class="eight-p p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.</p>
-    <div class="eight-btns btns">
-      <a href="#" class="eight-btn-ios ios">Download for iOS</a>
-      <a href="#" class="eight-btn-mac mac">Download for Mac</a>
-    </div>
-  </section>
-  <footer class="footer section">
-    <div class="footer-left">
-      <img src="images/logo.svg" alt="logo" class="footer-left-img">
-    </div>
-    <div class="footer-middle">
-      <a href="#" class="footer-one footer-a">FAQs</a>
-      <a href="#" class="footer-four footer-a">Contact Us</a>
-      <a href="#" class="footer-two footer-a">Privacy Policy</a>
-      <a href="#" class="footer-five footer-a">Press Kit</a>
-      <a href="#" class="footer-three footer-a">Install Guide</a>
-    </div>
-    <div class="footer-right">
-      <img src="images/icon-facebook.svg" alt="facebook" class="footer-right-img">
-      <img src="images/icon-twitter.svg" alt="twitter" class="footer-right-img">
-      <img src="images/icon-instagram.svg" alt="instagram" class="footer-right-img">
-    </div>
-  </footer>
+    </section>
+    <section class="section-three section">
+      <p class="three-h2 h2">Acess Clipboard Abywhere</p>
+      <p class="three-p p">Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+    </section>
+    <section class="section-four section">
+      <img src="images/image-devices.png" alt="image-devices" class="four-img">
+    </section>
+    <section class="section-five section">
+      <p class="five-h2 h2">Supercharge your workflow</p2>
+      <p class="five-p p">We've got the tools to boost your productivity.</p>
+    </section>
+    <section class="section-six section">
+      <div class="six six-A">
+        <img src="images/icon-blacklist.svg" alt="icon-blacklist" class="six-img">
+        <p class="h4-A h4">Create blacklists</p>
+        <p class="six-p">Ensure sensitive inforation never makes its way to your clipboard by excluding certain sources.</p>
+      </div>
+      <div class="six six-B">
+        <img src="images/icon-text.svg" alt="icon-text" class="six-img">
+        <p class="h4-B h4">Plain text snippets</p>
+        <p class="six-p">Remove unwanted formatting from copied text for a consistent look.</p>
+      </div>
+      <div class="six six-C">
+        <img src="images/icon-preview.svg" alt="icon-preview" class="six-img">
+        <p class="h4-C h4">Sneak preview</p>
+        <p class="six-p">Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div> 
+    </section>
+    <section class="section-seven section">
+      <img src="images/logo-google.png" alt="logo-google" class="seven-img">
+      <img src="images/logo-ibm.png" alt="logo-ibm" class="seven-img">
+      <img src="images/logo-microsoft.png" alt="logo-microsoft" class="seven-img">
+      <img src="images/logo-hp.png" alt="logo-hp" class="seven-img">
+      <img src="images/logo-vector-graphics.png" alt="logo-vector-graphics" class="seven-img">
+    </section>
+    <section class="section-eight section">
+      <p class="eight-h2 h2">Clipboard for iOS and Mac OS</p>
+      <p class="eight-p p">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.</p>
+      <div class="eight-btns btns">
+        <a href="#" class="eight-btn-ios ios">Download for iOS</a>
+        <a href="#" class="eight-btn-mac mac">Download for Mac</a>
+      </div>
+    </section>
+    <footer class="footer section">
+      <div class="footer-left">
+        <img src="images/logo.svg" alt="logo" class="footer-left-img">
+      </div>
+      <div class="footer-middle">
+        <a href="#" class="footer-one footer-a">FAQs</a>
+        <a href="#" class="footer-four footer-a">Contact Us</a>
+        <a href="#" class="footer-two footer-a">Privacy Policy</a>
+        <a href="#" class="footer-five footer-a">Press Kit</a>
+        <a href="#" class="footer-three footer-a">Install Guide</a>
+      </div>
+      <div class="footer-right">
+        <img src="images/icon-facebook.svg" alt="facebook" class="footer-right-img">
+        <img src="images/icon-twitter.svg" alt="twitter" class="footer-right-img">
+        <img src="images/icon-instagram.svg" alt="instagram" class="footer-right-img">
+      </div>
+    </footer>
+  </main>
 </body>
 </html>
