--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </section>
     <section class="section-three section">
-      <p class="three-h2 h2">Acess Clipboard Abywhere</p>
+      <p class="three-h2 h2">Acess Clipboard Anywhere</p>
       <p class="three-p p">Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
     </section>
     <section class="section-four section">
